# MasterThesis

./: .gitmodules  CMakeLists.txt  mySpecs.html  package.xml  test_plan
Doc/: Meeting_2021-11-03.txt  Workspace_guide.txt  errors.txt  lab_plan  list  meeting_dennis  nxp_drone_gazebo.params  test_plan  thesis_meeting  tuning_final.params
DrawIO_files/: MPC.drawio  Network_config.drawio  wind_exp.drawio
Matlab/: drone_model.m
Pyhton/: Active Learning Example.ipynb  Final.ipynb  GP_by_hand.ipynb  GPyTorch.ipynb  Images.ipynb  Model_test.ipynb  Prediction_test.ipynb  Sparse_GP_with_GPyTorch.ipynb  active_learning.ipynb  example_GPyTorch.py  example_custom.py  example_sklearn.py  gpytorch_y1_model  gpytorch_y1_model.pth  gpytorch_y2_model  gpytorch_y2_model.pth  helpers.py  kernel.npz  main.py  sklearn_test.ipynb  test.npz
System_ID/: ID_results
Unc_data/: Constraint_check.ipynb  lmpcc_windsimplesim_nominal_model_plus_wind_2022-11-30-11-14-14.bag  lmpcc_windsimplesim_nominal_model_plus_wind_2022-11-30-11-32-26.bag  lmpcc_windsimplesim_nominal_model_plus_wind_2022-11-30-11-32-26.csv  lmpcc_windsimplesim_nominal_model_plus_wind_2022-11-30-11-32-26sigma_x_mat.csv  lmpcc_windsimplesim_nominal_model_plus_wind_2022-11-30-11-32-26sigma_xy_mat.csv  lmpcc_windsimplesim_nominal_model_plus_wind_2022-11-30-11-32-26sigma_y_mat.csv  lmpcc_windsimplesim_nominal_model_plus_wind_2022-11-30-11-32-26x_mat.csv  lmpcc_windsimplesim_nominal_model_plus_wind_2022-11-30-11-32-26y_mat.csv  lmpcc_windsimplesim_nominal_model_plus_wind_2022-12-05-15-12-20.bag  lmpcc_windsimplesim_nominal_model_plus_wind_2022-12-05-15-59-32.bag  lmpcc_windsimplesim_nominal_model_plus_wind_2022-12-05-17-02-42.bag  lmpcc_windsimplesim_nominal_model_plus_wind_2022-12-05-17-43-08.bag  rosbag_read_unc.asv  rosbag_read_unc.m
Wind_data/: combine_csv.m  id-thrust-hover_2022-10-11-09-54-23.bag  lmpcc_windsimplesim_2_fans_random_tsp_path_2022-11-03-14-55-37.bag  lmpcc_windsimplesim_GP_model_plus_wind_2022-11-07-10-34-29.bag  lmpcc_windsimplesim_nominal_model_plus_wind_2022-11-07-10-41-43.bag  path_generator.asv  rosbag_read.m  simplecontrol_windsimplesim_test_timing_2022-10-10-15-26-23.bag  simplecontrol_windsimplesim_test_timing_2022-10-20-11-42-31.bag  timing_and_model_test.ipynb  timing_investigation.asv  timing_investigation.csv  timing_investigation.m  timing_investigation2.asv  timing_investigation2.m  timing_investigation_3.asv  timing_investigation_3.m  timing_investigation_input.csv  timing_investigation_sp.csv  (+5 more)
code/misc/hovergames_mpc_identification_data_collect/hovergames_mpc_identification/: CMakeLists.txt
code/misc/hovergames_mpc_identification_data_collect/hovergames_mpc_identification/cfg/: MPCIdentificationGazebo.cfg
code/misc/hovergames_mpc_identification_data_collect/hovergames_mpc_identification/config/: hovergames_mpc_identification.yaml
code/misc/hovergames_mpc_identification_data_collect/hovergames_mpc_identification/include/hovergames_mpc_identification/: helpers.h  input_generator.h  lqr_control.h  mpc_identification_exp.h  pid_control.h
code/misc/hovergames_mpc_identification_data_collect/hovergames_mpc_identification/launch/: mpc_identification_exp.launch  record_data.launch
code/misc/hovergames_mpc_identification_data_collect/hovergames_mpc_identification/src/: data_collector.cpp  data_collector_node.cpp  input_generator.cpp  lqr_control.cpp  mpc_identification_exp.cpp  mpc_identification_exp_node.cpp  pid_control.cpp  simple_control.cpp
(+586 files in other folders)
